--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TempMail</title>
+  <title>TempMail - Free Disposable Email</title>
+  <meta name="description" content="Generate secure, free, temporary email addresses instantly. Protect your privacy with TempMail.">
+  <meta name="keywords" content="temp mail, disposable email, temporary email, anonymous email, tempmail">
+  <meta name="author" content="TempMail Team">
+
+  <!-- ✅ Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
 
-  <!-- ✅ AdSense Script -->
+  <!-- ✅ AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3785436230198446"
     crossorigin="anonymous"></script>
 
@@ -121,10 +126,10 @@
     }
 
     .inbox-container {
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr 3fr 1fr;
       gap: 1rem;
       margin-top: 2rem;
-      flex-wrap: wrap;
     }
 
     .inbox, .preview {
@@ -132,8 +137,8 @@
       border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-      flex: 1 1 300px;
       min-height: 400px;
+      margin-bottom: 2rem;
     }
 
     .inbox-item {
@@ -191,19 +196,29 @@
       text-decoration: none;
     }
 
-    @media screen and (max-width: 600px) {
-      .email-header {
-        flex-direction: column;
-        align-items: flex-start;
+    .mobile-sticky-ad {
+      display: none;
+    }
+
+    @media screen and (max-width: 900px) {
+      .inbox-container {
+        grid-template-columns: 1fr;
       }
 
-      .top-bar {
-        flex-direction: column;
-        align-items: flex-start;
+      .inbox-container aside {
+        display: none;
       }
 
-      .buttons {
-        margin-top: 1rem;
+      .mobile-sticky-ad {
+        display: block;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background: white;
+        padding: 0.5rem 0;
+        box-shadow: 0 -1px 6px rgba(0,0,0,0.1);
+        z-index: 999;
+        text-align: center;
       }
     }
   </style>
@@ -220,53 +235,102 @@
   </div>
 
   <div class="main">
+
+    <!-- ✅ Top Banner Ad -->
+    <div style="margin: 1rem 0; text-align:center;">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-3785436230198446"
+           data-ad-slot="1234567891"
+           data-ad-format="horizontal"
+           data-full-width-responsive="true"></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
+
     <div class="email-header">
       <div class="left">
         <label>Your temporary email address:</label><br/>
         <div class="email-display" id="email">Click 🔁 to generate</div>
       </div>
       <div class="right">
-        <button onclick="copyEmail()">📋</button>
-        <button onclick="generateEmail()">🔁</button>
-        <button onclick="fetchInbox()">📨</button>
-        <button onclick="settings()">⚙️</button>
+        <button onclick="copyEmail()">📋Click to Copy</button>
+        <button onclick="generateEmail()">🔁 Change Mail</button>
+        <button onclick="fetchInbox()">📨 Refresh Inbox</button>
+        <button onclick="settings()">⚙️ Setting</button>
         <div class="toggle">
           <label>Auto-refresh</label>
-          <input type="checkbox" checked />
+          <input type="checkbox" id="autorefresh" checked />
         </div>
       </div>
     </div>
 
-    <!-- ✅ AdSense Ad Placement -->
-    <div style="margin: 2rem 0; text-align:center;">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-3785436230198446"
-           data-ad-slot="1234567890"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-
+    <!-- ✅ 3-column Layout: Left Ad, Main Content, Right Ad -->
     <div class="inbox-container">
-      <div class="inbox" id="inbox">
-        <p><strong>Inbox</strong> <small>(0 messages)</small></p>
-        <p>No emails yet...</p>
+      
+      <!-- ✅ Left Sidebar Ad -->
+      <aside style="background:white; padding:1rem; border-radius:12px; box-shadow:0 1px 4px rgba(0,0,0,0.05);">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-3785436230198446"
+             data-ad-slot="1234567895"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+      </aside>
+
+      <!-- ✅ Main Content -->
+      <div>
+        <div class="inbox" id="inbox">
+          <p><strong>Inbox</strong> <small>(0 messages)</small></p>
+          <p>No emails yet...</p>
+        </div>
+
+        <!-- ✅ Middle Content Ad -->
+        <div style="margin: 2rem 0; text-align:center;">
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-3785436230198446"
+               data-ad-slot="1234567892"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
+
+        <div class="preview">
+          <div class="tabs">
+            <button class="active">Email</button>
+            <button>Settings</button>
+          </div>
+          <div class="no-email">
+            <p><strong>No email selected</strong></p>
+            <p>Select an email from your inbox to view its contents here, or wait for new messages to arrive.</p>
+          </div>
+        </div>
       </div>
 
-      <div class="preview">
-        <div class="tabs">
-          <button class="active">Email</button>
-          <button>Settings</button>
-        </div>
-        <div class="no-email">
-          <p><strong>No email selected</strong></p>
-          <p>Select an email from your inbox to view its contents here, or wait for new messages to arrive.</p>
-        </div>
-      </div>
+      <!-- ✅ Right Sidebar Ad -->
+      <aside style="background:white; padding:1rem; border-radius:12px; box-shadow:0 1px 4px rgba(0,0,0,0.05);">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-3785436230198446"
+             data-ad-slot="1234567893"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+      </aside>
+
     </div>
+  </div>
+
+  <!-- ✅ Bottom Sticky Ad (Mobile Only) -->
+  <div class="mobile-sticky-ad">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-3785436230198446"
+         data-ad-slot="1234567894"
+         data-ad-format="horizontal"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
 
   <footer>
@@ -277,6 +341,27 @@
   </footer>
 
   <script>
+
+let autoRefreshEnabled = true;
+
+// This runs only after the DOM is loaded
+window.addEventListener("DOMContentLoaded", () => {
+  // Setup the checkbox toggle logic
+  const checkbox = document.getElementById("autorefresh");
+  if (checkbox) {
+    checkbox.addEventListener("change", (e) => {
+      autoRefreshEnabled = e.target.checked;
+    });
+  }
+
+  // Auto-refresh every 5 seconds
+  setInterval(() => {
+    if (autoRefreshEnabled) {
+      fetchInbox();
+    }
+  }, 15000);
+});
+
     async function generateEmail() {
       const emailDisplay = document.getElementById("email");
       emailDisplay.textContent = "⏳ Generating...";
@@ -297,12 +382,10 @@
         const res = await fetch("/get-emails");
         const data = await res.json();
         inbox.innerHTML = `<p><strong>Inbox</strong> <small>(${data.length} messages)</small></p>`;
-
         if (!Array.isArray(data) || data.length === 0) {
           inbox.innerHTML += "<p>No emails yet.</p>";
           return;
         }
-
         data.forEach(msg => {
           const item = document.createElement("div");
           item.className = "inbox-item";
@@ -323,6 +406,11 @@
     function settings() {
       alert("⚙️ Settings coming soon...");
     }
+
+  
+
+
+
   </script>
 
 </body>
