--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
 
   gtag('config', 'G-QGDMB3J2HP');
 </script>
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="00c0bf58-b42f-47d9-8d1d-8bc44e070c11" type="text/javascript" async></script>
+
   <style>
     :root {
       --primary: #111;
