--- a/public/terms.html
+++ b/public/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service - TempMail</title>
+  <title>Terms of Service - TempMailr</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,7 +15,7 @@
         <svg viewBox="0 0 24 24" fill="currentColor">
           <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
         </svg>
-        TempMail
+        TempMailr
       </a>
       <div class="buttons">
         <button class="btn btn-primary" onclick="window.location.href='/'">
@@ -31,7 +31,7 @@
         <h1>Terms of Service</h1>
         
         <h2>1. Acceptance of Terms</h2>
-        <p>By using TempMail, you agree to these terms and our Privacy Policy.</p>
+        <p>By using TempMailr, you agree to these terms and our Privacy Policy.</p>
         
         <h2>2. Prohibited Activities</h2>
         <p>You must not use our service for any illegal activities or spamming.</p>
@@ -53,7 +53,7 @@
         <a href="contact.html">Contact</a>
       </div>
       <div class="footer-info">
-        <p>© <span id="current-year"></span> TempMail. All rights reserved.</p>
+        <p>© <span id="current-year"></span> TempMailr. All rights reserved.</p>
       </div>
     </div>
   </footer>
