--- a/public/doc.html
+++ b/public/doc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documentation - TempMail</title>
+  <title>Documentation - TempMailr</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
         <svg viewBox="0 0 24 24" fill="currentColor">
           <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
         </svg>
-        TempMail
+        TempMailr
       </a>
       <div class="buttons">
         <button class="btn btn-primary" onclick="window.location.href='/'">
@@ -26,7 +26,7 @@
 
   <main class="main-content">
     <div class="content-card">
-      <h1>TempMail Documentation</h1>
+      <h1>TempMailr Documentation</h1>
       <p class="text-muted">Your guide to using our temporary email service effectively</p>
 
       <div class="doc-section">
@@ -46,7 +46,7 @@
           <h3>1. Generate Email Address</h3>
           <p>Click the "Generate Email" button to create a random temporary email address.</p>
           <div class="example-box">
-            <code>example@tempmail.in</code>
+            <code>example@tempmailr.in</code>
           </div>
         </div>
 
@@ -115,7 +115,7 @@
         </div>
         <div class="faq-item">
           <h3>Q: Is this service really free?</h3>
-          <p>A: Yes! TempMail is completely free to use, supported by non-intrusive ads.</p>
+          <p>A: Yes! TempMailr is completely free to use, supported by non-intrusive ads.</p>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
         <a href="contact.html">Contact</a>
       </div>
       <div class="footer-info">
-        <p>© <span id="current-year"></span> TempMail. All rights reserved.</p>
+        <p>© <span id="current-year"></span> TempMailr . All rights reserved.</p>
       </div>
     </div>
   </footer>
