--- a/public/contact.html
+++ b/public/contact.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Same header as privacy.html -->
   <header class="top-bar">
     <div class="top-bar-content">
       <a href="/" class="logo">
@@ -19,8 +18,8 @@
       </a>
       <div class="buttons">
         <button class="btn btn-primary" onclick="window.location.href='/'">
-            ← Back to Home
-          </button>
+          ← Back to Home
+        </button>
       </div>
     </div>
   </header>
@@ -28,13 +27,15 @@
   <main class="main-content">
     <div class="content-card contact-form">
       <h1>Contact Us</h1>
-      
+      <p class="text-muted">Have a question, suggestion, or just want to say hello? We'd love to hear from you.</p>
+      <p>Please fill out the form below and our team will get back to you as soon as possible. We aim to respond within 24–48 hours on business days.</p>
+
       <form>
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" id="name" required>
         </div>
-        
+
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" required>
@@ -47,8 +48,15 @@
 
         <button type="submit" class="btn btn-primary">Send Message</button>
       </form>
+
+      <h2>Alternative Contact Methods</h2>
+      <p>If you are facing technical issues, you can also reach us at <strong>support@tempmailr.in</strong>. We monitor this inbox during business hours (Mon–Fri, 9 AM – 6 PM IST).</p>
+
+      <h2>Partnerships and Feedback</h2>
+      <p>We're always open to collaborations with developers, educators, and privacy advocates. If you want to work with us or give product feedback, just drop us a note above.</p>
     </div>
   </main>
+
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-links">
@@ -66,6 +74,5 @@
   <script>
     document.getElementById('current-year').textContent = new Date().getFullYear();
   </script>
-  <!-- Same footer as privacy.html -->
 </body>
 </html>
