--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,47 @@
     </aside>
   </main>
 
+  <section class="about-tempmailr blog-style container">
+    <h2 class="blog-title">The Rise of Temporary Email in 2025</h2>
+    <p class="blog-intro">
+      With growing concerns over online privacy and data security, temporary email services like <strong>TempMailr</strong> have become essential tools for internet users worldwide. From casual browsing to app testing, here's why more people are switching to disposable inboxes.
+    </p>
+  
+    <article class="blog-article">
+      <h3>1. Protecting Your Privacy in a Digital World</h3>
+      <p>
+        Every time you sign up for a new app, subscribe to a newsletter, or register for a forum, your personal email is at risk of being sold, spammed, or even hacked. TempMailr helps you shield your real inbox by offering a disposable email address that self-destructs after use.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>2. No Signups. No Strings Attached.</h3>
+      <p>
+        Unlike most services, TempMailr doesn't ask for your real email, name, or phone number. It’s free, instant, and works across all platforms. No passwords to remember. Just generate, copy, and use.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>3. Developers Love It Too</h3>
+      <p>
+        QA engineers and developers often use TempMailr to test signup flows, email notifications, and validation systems without clogging their real inbox. The auto-refreshing inbox and token-based access make it ideal for testing automation scripts.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>4. Avoiding Spam and Unwanted Promotions</h3>
+      <p>
+        Tired of your inbox being flooded with offers, discount emails, and unwanted follow-ups? Use a TempMailr address for short-term logins and one-time downloads — and never see spam again.
+      </p>
+    </article>
+  
+    <p class="blog-conclusion">
+      In 2025, the smarter way to browse, sign up, and test online is by going temporary. Try TempMailr today — your privacy deserves it.
+    </p>
+  </section>
+  
+  
+
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-links">
