--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,6 @@
   </div>
 
   <main>
-    <section class="site-description">
-      <div class="container">
-        <h1>Welcome to TempMailr</h1>
-        <p>TempMailr provides you with a free, disposable email address you can use to protect your privacy, avoid spam, and stay anonymous online. It’s fast, secure, and requires no signup. Start using it below!</p>
-      </div>
-    </section>
-
     <article class="main-content">
       <div class="email-card">
         <div class="email-header">
@@ -43,7 +36,12 @@
           </div>
         </div>
       </div>
-
+      <section class="site-description">
+        <div class="container">
+          <h1>Welcome to TempMailr</h1>
+          <p>TempMailr provides you with a free, disposable email address you can use to protect your privacy, avoid spam, and stay anonymous online. It’s fast, secure, and requires no signup. Start using it below!</p>
+        </div>
+      </section>
       <div class="inbox-container">
         <div class="inbox-panel">
           <div class="inbox-header">
@@ -86,6 +84,7 @@
       <h3>1. Protecting Your Privacy in a Digital World</h3>
       <p>
         Every time you sign up for a new app, subscribe to a newsletter, or register for a forum, your personal email is at risk of being sold, spammed, or even hacked. TempMailr helps you shield your real inbox by offering a disposable email address that self-destructs after use.
+        With no history tied to your permanent email, you avoid the risks of data breaches and identity leaks that have become all too common in today’s digital landscape.
       </p>
     </article>
   
@@ -93,6 +92,7 @@
       <h3>2. No Signups. No Strings Attached.</h3>
       <p>
         Unlike most services, TempMailr doesn't ask for your real email, name, or phone number. It’s free, instant, and works across all platforms. No passwords to remember. Just generate, copy, and use.
+        This simplicity ensures that anyone, regardless of tech experience, can access secure and disposable inboxes in seconds — perfect for both everyday users and tech-savvy professionals.
       </p>
     </article>
   
@@ -100,6 +100,7 @@
       <h3>3. Developers Love It Too</h3>
       <p>
         QA engineers and developers often use TempMailr to test signup flows, email notifications, and validation systems without clogging their real inbox. The auto-refreshing inbox and token-based access make it ideal for testing automation scripts.
+        Developers working on form validation, onboarding experiences, and email alert systems can simulate real-world email interaction across hundreds of test accounts using nothing more than disposable inboxes.
       </p>
     </article>
   
@@ -107,11 +108,62 @@
       <h3>4. Avoiding Spam and Unwanted Promotions</h3>
       <p>
         Tired of your inbox being flooded with offers, discount emails, and unwanted follow-ups? Use a TempMailr address for short-term logins and one-time downloads — and never see spam again.
+        Whether you're claiming an eBook, unlocking a discount code, or entering a giveaway, TempMailr ensures that none of those temporary interactions turn into a permanent headache.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>5. Smart Browsing, Safer Experience</h3>
+      <p>
+        Modern websites are riddled with trackers, cookies, and email-harvesting scripts. With a disposable inbox, you reduce the digital footprint associated with your identity, enhancing both your browsing safety and peace of mind.
+        TempMailr gives you the freedom to explore the internet without revealing your personal contact details — a small step that goes a long way in protecting your privacy.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>6. Perfect for Free Trials and Multiple Accounts</h3>
+      <p>
+        Trying to access multiple free trials on Netflix, Spotify, or Amazon Prime? TempMailr enables you to create multiple accounts by generating unique, valid email addresses instantly. 
+        This eliminates the need to manage multiple Gmail accounts or constantly clear cookies to get around sign-up limits.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>7. Essential for App Testers and Beta Users</h3>
+      <p>
+        If you're participating in closed beta testing or exploring new apps still in development, disposable emails allow you to interact without fear of future marketing or data leaks.
+        TempMailr gives testers the flexibility to create, verify, and discard emails quickly—an essential tool in modern software testing environments.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>8. Minimalist and Mobile-Friendly</h3>
+      <p>
+        TempMailr is optimized for mobile and tablet users, delivering a clutter-free interface that loads instantly even on slow connections. 
+        With one-tap copy and inbox auto-refresh, it’s easier than ever to access your temporary email on the go.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>9. Anonymity That Matters</h3>
+      <p>
+        In an age where online identity is tied to targeted ads, algorithms, and profiling, anonymity is becoming a luxury. TempMailr restores that luxury, giving you email access without ever needing to reveal your identity or IP.
+        For whistleblowers, journalists, researchers, and privacy enthusiasts, it’s the perfect tool to stay hidden in plain sight.
+      </p>
+    </article>
+  
+    <article class="blog-article">
+      <h3>10. Built for the Future of the Internet</h3>
+      <p>
+        As the internet evolves, so does the need for smarter privacy tools. TempMailr is at the forefront, offering robust, scalable, and anonymous email solutions to match the complexity of the modern web.
+        Whether you're a digital nomad, a curious explorer, or a cautious shopper, TempMailr equips you with the tools to stay safe and anonymous — without giving up usability or access.
       </p>
     </article>
   
     <p class="blog-conclusion">
-      In 2025, the smarter way to browse, sign up, and test online is by going temporary. Try TempMailr today — your privacy deserves it.
+      In 2025 and beyond, smart internet users will rely on temporary solutions to maintain privacy and security online. <strong>TempMailr</strong> isn’t just a tool—it’s a necessity. Whether you're testing, browsing, downloading, or staying anonymous, TempMailr makes it all possible—effortlessly.
+      <br><br>
+      <a href="/" class="btn btn-primary">Get Your Temporary Email Now</a> — because your inbox deserves peace.
     </p>
   </section>
   
