--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,15 @@
 
   <main>
     <article class="main-content">
+      <div class="content-card text-center">
+        <div class="ad-container ad-content-page">
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-xxx"
+               data-ad-slot="xxx"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+        </div>
       <div class="email-card">
         <div class="email-header">
           <h2>Temporary Email Address</h2>
@@ -34,14 +43,14 @@
               </svg>
             </button>
           </div>
+          <section class="site-description">
+          <div class="container">
+            <p>Forget about spam, advertising mailings, hacking and attacking robots. Keep your real mailbox clean and secure. Temp Mail provides temporary, secure, anonymous, free, disposable email address.</p>
+          </div>
+        </section>
         </div>
       </div>
-      <section class="site-description">
-        <div class="container">
-          <h1>Welcome to TempMailr</h1>
-          <p>TempMailr provides you with a free, disposable email address you can use to protect your privacy, avoid spam, and stay anonymous online. It’s fast, secure, and requires no signup. Start using it below!</p>
-        </div>
-      </section>
+
       <div class="inbox-container">
         <div class="inbox-panel">
           <div class="inbox-header">
@@ -57,21 +66,16 @@
             <h4>No messages yet</h4>
             <p>Your email is live and ready to receive messages. Share it with any website or app to test email functionality.</p>
           </div>
+          <section class="site-description">
+            <div class="container">
+              <h1>Welcome to TempMailr</h1>
+              <p>TempMailr provides you with a free, disposable email address you can use to protect your privacy, avoid spam, and stay anonymous online. It’s fast, secure, and requires no signup. Start using it below!</p>
+            </div>
+          </section>
         </div>
       </div>
     </article>
 
-    <div class="ad-container">
-      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3785436230198446" data-ad-slot="1234567890" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    </div>
-
-    <div class="ad-container">
-      <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-format="fluid" data-ad-layout-key="-fb+5w+4e-db+86" data-ad-client="ca-pub-3785436230198446" data-ad-slot="9876543210"></ins>
-    </div>
-
-    <aside class="sidebar-ad">
-      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3785436230198446" data-ad-slot="1122334455" data-ad-format="rectangle" data-full-width-responsive="true"></ins>
-    </aside>
   </main>
 
   <section class="about-tempmailr blog-style container">
