--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Existing meta tags remain the same -->
   <link rel="stylesheet" href="styles.css">
+  google-site-verification=v6nCkbX5BmQHUpoBzRkynH7hGD3v7C-IalvOJfTH1ac
 </head>
 <body>
   <div class="top-bar">
